--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-downloader": "^1.0.4",
-    "gulp-sass": "^2.1.1"
+    "gulp-sass": "^2.1.1",
+    "gulp-unzip": "^0.1.3"
   }
 }
