--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "gulp": "^3.9.0",
     "gulp-downloader": "^1.0.4",
     "gulp-sass": "^2.1.1",
-    "gulp-unzip": "^0.1.3"
+    "gulp-decompress": "^1.2.0"
   }
 }
